style: fix h2 stretch

--- a/style.css
+++ b/style.css
@@ -13,18 +13,18 @@
     margin: 0;
 }
 h1 {
-    font-family: "Fraunces", sans-serif;
+    font-family: "Fraunces";
     font-optical-sizing: auto;
     font-weight: 700;
     font-style: normal;
     margin: 16px 0;
 }
 h2 {
-    font-family: "Montserrat", sans-serif;
+    font-family: "Montserrat";
     font-optical-sizing: auto;
     font-weight: 500;
     font-style: normal;
-    font-stretch: 150%;
+    font-stretch: 200%;
     font-size: 16px;
     color: var(--Dark-grayish-blue);
 }
